--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,21 +1,23 @@
 // Variables
 
 // Main color
-$primary-color: #000;
+$primary-color: #fff;
+$bg-color: #000;
 
 // Anchor color
 $secondary-color: #00cdff;
 
 // Font color
-$font-color: #fff;
+$font-color: #000;
 
 $navbar-text-shadow: true;
 $header-text-shadow: true;
-$header-background-color: $primary-color;
-$intro-text-color: $font-color;
-$navbar-color: $font-color;
+$header-background-color: $bg-color;
+$intro-text-color: $primary-color;
+$navbar-color: $primary-color;
 $navbar-lg-collapse-background-color: $header-background-color;
-$navbar-lg-background: transparent;
+//$navbar-lg-background: transparent;
+$navbar-lg-background: solid;
 $navbar-sm-background-color: $navbar-lg-collapse-background-color;
 
 $social-buttons-color: $secondary-color;
